kubernetes/apps/cleanuparr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: cleanuparr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`cleanuparr.sobrinho.pt`)
      kind: Rule
      services:
        - name: cleanuparr
          port: app
  tls:
    secretName: cleanuparr-cert
